# Infer-vq-wav2vec

./: README.md  hubconf.py  pyproject.toml  vqwav2vec.ipynb
vqwav2vec/: conv.py  model.py  pad.py  vq.py
vqwav2vec/transfer/: weight.py
