[tool.poetry]
name = "vqwav2vec"
version = "1.0.0"
description = "Easy-to-Use vq-wav2vec inference model"
authors = ["tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/Infer-vq-wav2vec"

[tool.poetry.dependencies]
python = "^3.10"
## Poetry is not good for version control of PyTorch (it has many many variants for a version, so poetry become confused)
## torch = "2.0.0"

[tool.poetry.dev-dependencies]
pytest = "7.*"
# s3prl = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  # This is opinionated
  "line-too-long",
  "pointless-string-statement",
  "no-member",
]